--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "erc721a": "^4.2.3"
+    "erc721a": "^4.2.3",
+    "hardhat": "^2.12.7"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0"
